Fixed webapps submenu tab size on mobile

--- a/kamehouse-ui/src/main/webapp/css/snippets/kh-webapp-tabs.css
+++ b/kamehouse-ui/src/main/webapp/css/snippets/kh-webapp-tabs.css
@@ -27,10 +27,11 @@
 
 @media (max-width : 900px) {
   .kh-webapp-tabs button {
-    padding-right: 20px;
-    padding-left: 20px;
+    padding-right: 5px;
+    padding-left: 5px;
     padding-top: 10px;
     padding-bottom: 10px;
+    min-width: 50px;
   }
 }
 
